补充 JVM GC 参数